# ma

./: README.md
Documentation/: README.md
Examples/Bots/Smart bots examples/: README.md
Examples/Bots/Testbots-for-plugins/language-selection-test/: README.md
Examples/Bots/Testbots-for-plugins/miniapps_test/: README.md
Examples/Bots/Testbots-for-plugins/miniapps_test/web/smartcash/: _ctrl_login.jsp  _ctrl_register.jsp
Examples/Bots/Testbots-for-plugins/msisdn-confirmation-test/: README.md
Examples/Bots/Testbots-for-plugins/secret-input-sample/: README.md
Examples/Bots/Testbots-for-plugins/sendfile-demo/: README.md
Examples/Bots/Testbots-for-plugins/sendfile-demo/web/: photo_link.jsp
Tools/Libs/db-template/: build.properties  build.xml  ivy.xml
Tools/Libs/db-template-test/: build.properties  build.xml  ivy.xml
Tools/Libs/db-template-test/src/main/resources/: test_db.properties
Tools/Libs/general-utils-2/: build.gradle  gradle.properties  settings.gradle
Tools/Libs/general-utils-2/gradle/wrapper/: gradle-wrapper.properties
Tools/Libs/mx-utils/: .gitignore  build.properties  build.xml  ivy.xml
Tools/Libs/mx-utils/src/test/resources/: log4j.properties
Tools/Libs/oomkiller/: CMakeLists.txt  HowToBuild.txt  Test.java  oomkiller.c
Tools/Libs/pdf-generator/: build.properties  build.xml  ivy.xml
Tools/Libs/rest-utils/: build.properties  build.xml  ivy.xml
Tools/Libs/rest-utils/src/mobi/eyeline/utils/rest/errors/: DefaultExceptionMapper.java  (+2 more)
Tools/Libs/restclient/: build.properties  build.xml  ivy.xml
Tools/Libs/rsm/rsm-tc8/: build.gradle
(+94 files in other folders)
